--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "2-2 오픈소스소프트웨어설계및실습",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "bin": {
     "calcbox": "./main.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
